@@ -1,0 +1,5 @@
+@comment $NetBSD: PLIST,v 1.1 2019/08/13 02:21:44 brook Exp $
+share/texmf-dist/doc/latex/beamerposter/README
+share/texmf-dist/doc/latex/beamerposter/beamerposter.pdf
+share/texmf-dist/doc/latex/beamerposter/beamerposter.tex
+share/texmf-dist/doc/latex/beamerposter/example.tex
